// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - settings fee recipient can update 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 49136,
}
`;

exports[`EthVault - settings metadata IPFS hash only admin can update 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 32703,
}
`;

exports[`EthVault - settings operator can be updated by admin 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 53090,
}
`;

exports[`EthVault - settings validators root can update 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 55004,
}
`;
